--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "mister-bitcoin",
   "version": "0.0.0",
+  "homepage": "https://github.com/TzviaIzhakov/mister-bitcoin-vue/",
   "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -19,6 +22,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
+    "gh-pages": "^6.1.0",
     "sass": "^1.69.5",
     "vite": "^4.4.11"
   }
